--- a/MassAutoGarage/bin/MassAutoGarage.dll.config
+++ b/MassAutoGarage/bin/MassAutoGarage.dll.config
@@ -20,7 +20,7 @@
 	  <add key="aspnet:MaxJsonDeserializerMembers" value="15000000" />
   </appSettings>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=SikandarAzam\SQLEXPRESS04;Initial Catalog=MassAutoGarage_db1;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=DESKTOP-8Q7N8BG\SQLEXPRESS;Initial Catalog=MassAutoGaragedbNew;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
