--- a/MassAutoGarage/MassAutoGarage.csproj
+++ b/MassAutoGarage/MassAutoGarage.csproj
@@ -4563,6 +4563,7 @@
     <Folder Include="CustomerAttachment\" />
     <Folder Include="Images\EmirateFile\" />
     <Folder Include="Images\EmployeeContactCardFile\" />
+    <Folder Include="Images\EmployeePhoto\" />
     <Folder Include="Images\InsuranceFile\" />
     <Folder Include="Images\PassportFile\" />
     <Folder Include="Images\PhotoFile\" />
