--- a/MassAutoGarage/MassAutoGarage.csproj
+++ b/MassAutoGarage/MassAutoGarage.csproj
@@ -3516,6 +3516,7 @@
     <Content Include="MyApp\HRMS_AddDepartment.js" />
     <Content Include="MyApp\HRMS_DeductionType.js" />
     <Content Include="MyApp\HRMS_Employee.js" />
+    <Content Include="MyApp\HRMS_EmployeeBankDetails.js" />
     <Content Include="MyApp\HRMS_EmployeeDocuments.js" />
     <Content Include="MyApp\HRMS_Holiday.js" />
     <Content Include="MyApp\HRMS_LeaveType.js" />
@@ -3749,6 +3750,7 @@
     <Compile Include="Data\GroupMaster.cs" />
     <Compile Include="Data\HRMS_DeductionType\HRMSDeductionTypeDL.cs" />
     <Compile Include="Data\HRMS_Department\HRMSDepartment_DL.cs" />
+    <Compile Include="Data\HRMS_EmployeeBankDetails\HRMSEmployeeBankDetailsDL.cs" />
     <Compile Include="Data\HRMS_EmployeeDocuments\HRMSEmployeeDocumentsDL.cs" />
     <Compile Include="Data\HRMS_Employee\HRMSEmployeeDL.cs" />
     <Compile Include="Data\HRMS_Holiday\HRMSHolidayDL.cs" />
@@ -3804,6 +3806,7 @@
     <Compile Include="Models\GroupMasterModel.cs" />
     <Compile Include="Models\HRMS_DeductionType\HRMS_DeductionTypeModel.cs" />
     <Compile Include="Models\HRMS_Department\HRMSDepartmentModel.cs" />
+    <Compile Include="Models\HRMS_EmployeeBankDetails\HRMSEmployeeBankDetailsModel.cs" />
     <Compile Include="Models\HRMS_EmployeeDocuments\HRMSEmployeeDocumentsModel.cs" />
     <Compile Include="Models\HRMS_Employee\HRMSEmployeeModel.cs" />
     <Compile Include="Models\HRMS_Holiday\HRMSHolidayModel.cs" />
