--- a/MassAutoGarage/MassAutoGarage.csproj
+++ b/MassAutoGarage/MassAutoGarage.csproj
@@ -3518,6 +3518,7 @@
     <Content Include="MyApp\HRMS_Employee.js" />
     <Content Include="MyApp\HRMS_EmployeeBankDetails.js" />
     <Content Include="MyApp\HRMS_EmployeeDocuments.js" />
+    <Content Include="MyApp\HRMS_EmployeeFamilyDetails.js" />
     <Content Include="MyApp\HRMS_Holiday.js" />
     <Content Include="MyApp\HRMS_LeaveType.js" />
     <Content Include="MyApp\HRMS_MaritalStatus.js" />
@@ -3752,6 +3753,7 @@
     <Compile Include="Data\HRMS_Department\HRMSDepartment_DL.cs" />
     <Compile Include="Data\HRMS_EmployeeBankDetails\HRMSEmployeeBankDetailsDL.cs" />
     <Compile Include="Data\HRMS_EmployeeDocuments\HRMSEmployeeDocumentsDL.cs" />
+    <Compile Include="Data\HRMS_EmployeeFamilyDetails\HRMSEmployeeFamilyDetailsDL.cs" />
     <Compile Include="Data\HRMS_Employee\HRMSEmployeeDL.cs" />
     <Compile Include="Data\HRMS_Holiday\HRMSHolidayDL.cs" />
     <Compile Include="Data\HRMS_LeaveType\HRMSLeaveTypeDL.cs" />
@@ -3808,6 +3810,7 @@
     <Compile Include="Models\HRMS_Department\HRMSDepartmentModel.cs" />
     <Compile Include="Models\HRMS_EmployeeBankDetails\HRMSEmployeeBankDetailsModel.cs" />
     <Compile Include="Models\HRMS_EmployeeDocuments\HRMSEmployeeDocumentsModel.cs" />
+    <Compile Include="Models\HRMS_EmployeeFamilyDetails\HRMSEmployeeFamilyDetailsModel.cs" />
     <Compile Include="Models\HRMS_Employee\HRMSEmployeeModel.cs" />
     <Compile Include="Models\HRMS_Holiday\HRMSHolidayModel.cs" />
     <Compile Include="Models\HRMS_LeaveType\HRMSLeaveTypeModel.cs" />
@@ -4566,6 +4569,7 @@
     <Folder Include="CustomerAttachment\" />
     <Folder Include="Images\EmirateFile\" />
     <Folder Include="Images\EmployeeContactCardFile\" />
+    <Folder Include="Images\EmployeeFamilyPhoto\" />
     <Folder Include="Images\InsuranceFile\" />
     <Folder Include="Images\InsurancePhoto\" />
     <Folder Include="Images\PassportFile\" />
