--- a/MassAutoGarage/MassAutoGarage.csproj
+++ b/MassAutoGarage/MassAutoGarage.csproj
@@ -3514,18 +3514,22 @@
     <Content Include="MyApp\Customer_Master.js" />
     <Content Include="MyApp\GroupMaster.js" />
     <Content Include="MyApp\HRMS_AddDepartment.js" />
+    <Content Include="MyApp\HRMS_AirTicketIssue.js" />
     <Content Include="MyApp\HRMS_Attendance.js" />
     <Content Include="MyApp\HRMS_Bonus.js" />
     <Content Include="MyApp\HRMS_DeductionType.js" />
     <Content Include="MyApp\HRMS_Employee.js" />
     <Content Include="MyApp\HRMS_EmployeeBankDetails.js" />
+    <Content Include="MyApp\HRMS_EmployeeDeduction.js" />
     <Content Include="MyApp\HRMS_EmployeeDocuments.js" />
     <Content Include="MyApp\HRMS_EmployeeFamilyDetails.js" />
     <Content Include="MyApp\HRMS_Holiday.js" />
+    <Content Include="MyApp\HRMS_InternalRequest.js" />
     <Content Include="MyApp\HRMS_Leave.js" />
     <Content Include="MyApp\HRMS_LeaveType.js" />
     <Content Include="MyApp\HRMS_Loan.js" />
     <Content Include="MyApp\HRMS_MaritalStatus.js" />
+    <Content Include="MyApp\HRMS_OverTime.js" />
     <Content Include="MyApp\HRMS_SalesTarget.js" />
     <Content Include="MyApp\LoyaltyPointsMaster.js" />
     <Content Include="MyApp\PromotionMaster.js" />
@@ -3753,19 +3757,24 @@
     <Compile Include="Data\Facebook\LeadGenerate_DL.cs" />
     <Compile Include="Data\GenderMaster\GenderMaster_DL.cs" />
     <Compile Include="Data\GroupMaster.cs" />
+    <Compile Include="Data\HRMS_AirTicketIssue\HRMSAirTicketIssueDL.cs" />
     <Compile Include="Data\HRMS_Attendance\HRMSAttendanceDL.cs" />
     <Compile Include="Data\HRMS_Bonus\HRMSBonusDL.cs" />
     <Compile Include="Data\HRMS_DeductionType\HRMSDeductionTypeDL.cs" />
     <Compile Include="Data\HRMS_Department\HRMSDepartment_DL.cs" />
     <Compile Include="Data\HRMS_EmployeeBankDetails\HRMSEmployeeBankDetailsDL.cs" />
+    <Compile Include="Data\HRMS_EmployeeDeduction\HRMSEmployeeDeductionDL.cs" />
     <Compile Include="Data\HRMS_EmployeeDocuments\HRMSEmployeeDocumentsDL.cs" />
     <Compile Include="Data\HRMS_EmployeeFamilyDetails\HRMSEmployeeFamilyDetailsDL.cs" />
     <Compile Include="Data\HRMS_Employee\HRMSEmployeeDL.cs" />
     <Compile Include="Data\HRMS_Holiday\HRMSHolidayDL.cs" />
+    <Compile Include="Data\HRMS_InternalRequest\HRMSInternalRequestDL.cs" />
+    <Compile Include="Data\HRMS_LeaveReport\HRMSLeaveReportDL.cs" />
     <Compile Include="Data\HRMS_LeaveType\HRMSLeaveTypeDL.cs" />
     <Compile Include="Data\HRMS_Leave\HRMSLeaveDL.cs" />
     <Compile Include="Data\HRMS_Loan\HRMSLoanDL.cs" />
     <Compile Include="Data\HRMS_MaritalStatus\HRMSMaritalStatus_DL.cs" />
+    <Compile Include="Data\HRMS_OverTime\HRMSOverTimeDL.cs" />
     <Compile Include="Data\HRMS_SalesTarget\HRMSSalesTargetDL.cs" />
     <Compile Include="Data\JobCategoryMaster\JobCategoryMaster_DL.cs" />
     <Compile Include="Data\LeadSourceMaster\LeadSourceMaster_DL.cs" />
@@ -3815,19 +3824,24 @@
     <Compile Include="Models\Facebook\LeadsGenerateModel.cs" />
     <Compile Include="Models\GenderMaster\GenderMasterModel.cs" />
     <Compile Include="Models\GroupMasterModel.cs" />
+    <Compile Include="Models\HRMS_AirTicketIssue\HRMSAirTicketIssueModel.cs" />
     <Compile Include="Models\HRMS_Attendance\HRMSAttendanceModel.cs" />
     <Compile Include="Models\HRMS_Bonus\HRMSBonusModel.cs" />
     <Compile Include="Models\HRMS_DeductionType\HRMS_DeductionTypeModel.cs" />
     <Compile Include="Models\HRMS_Department\HRMSDepartmentModel.cs" />
     <Compile Include="Models\HRMS_EmployeeBankDetails\HRMSEmployeeBankDetailsModel.cs" />
+    <Compile Include="Models\HRMS_EmployeeDeduction\HRMSEmployeeDeductionModel.cs" />
     <Compile Include="Models\HRMS_EmployeeDocuments\HRMSEmployeeDocumentsModel.cs" />
     <Compile Include="Models\HRMS_EmployeeFamilyDetails\HRMSEmployeeFamilyDetailsModel.cs" />
     <Compile Include="Models\HRMS_Employee\HRMSEmployeeModel.cs" />
     <Compile Include="Models\HRMS_Holiday\HRMSHolidayModel.cs" />
+    <Compile Include="Models\HRMS_InternalRequest\HRMSInternalRequestModel.cs" />
+    <Compile Include="Models\HRMS_LeaveReport\HRMSLeaveReportModel.cs" />
     <Compile Include="Models\HRMS_LeaveType\HRMSLeaveTypeModel.cs" />
     <Compile Include="Models\HRMS_Leave\HRMSLeaveModel.cs" />
     <Compile Include="Models\HRMS_Loan\HRMSLoanModel.cs" />
     <Compile Include="Models\HRMS_MaritalStatus\HRMSMaritalStatusModel.cs" />
+    <Compile Include="Models\HRMS_OverTime\HRMSOverTimeModel.cs" />
     <Compile Include="Models\HRMS_SalesTarget\HRMSSalesTargetModel.cs" />
     <Compile Include="Models\JobCategoryMaster\JobCategoryMasterModel.cs" />
     <Compile Include="Models\LeadSourceMaster\LeadSourceMasterModel.cs" />
