--- a/MassAutoGarage/MassAutoGarage.csproj
+++ b/MassAutoGarage/MassAutoGarage.csproj
@@ -3696,7 +3696,20 @@
     <Compile Include="Controllers\HRMS_PaySlipController.cs" />
     <Compile Include="Controllers\HRMS_SalaryStatementController.cs" />
     <Compile Include="Controllers\HRMS_SalesTargetController.cs" />
+    <Compile Include="Controllers\HR_FinalClearanceReportController.cs" />
     <Compile Include="Controllers\HR_GeneralRequestController.cs" />
+    <Compile Include="Controllers\HR_LeaveClearanceController.cs" />
+    <Compile Include="Controllers\HR_LeaveRequestController.cs" />
+    <Compile Include="Controllers\HR_MainPowerRequisitionController.cs" />
+    <Compile Include="Controllers\HR_NewStaffJoiningController.cs" />
+    <Compile Include="Controllers\HR_PassportReleaseController.cs" />
+    <Compile Include="Controllers\HR_RecruitmentRequisitionController.cs" />
+    <Compile Include="Controllers\HR_ReimbursementController.cs" />
+    <Compile Include="Controllers\HR_RenualAndNonRenwalController.cs" />
+    <Compile Include="Controllers\HR_ResumingDutyController.cs" />
+    <Compile Include="Controllers\HR_StaffTransferReportController.cs" />
+    <Compile Include="Controllers\HR_TourIntimationController.cs" />
+    <Compile Include="Controllers\HR_WorkHandOverReportController.cs" />
     <Compile Include="Controllers\JobCardSalesReturnController.cs" />
     <Compile Include="Controllers\JobCategoryController.cs" />
     <Compile Include="Controllers\JournalVouchersController.cs" />
@@ -4589,6 +4602,32 @@
     <Content Include="Views\HRMS_LeaveReport\Testing.cshtml" />
     <Content Include="Views\HR_GeneralRequest\GeneralRequest.cshtml" />
     <Content Include="Views\HR_GeneralRequest\GeneralRequestList.cshtml" />
+    <Content Include="Views\HR_LeaveRequest\LeaveRequest.cshtml" />
+    <Content Include="Views\HR_LeaveRequest\LeaveRequestList.cshtml" />
+    <Content Include="Views\HR_NewStaffJoining\NewStaffJoining.cshtml" />
+    <Content Include="Views\HR_NewStaffJoining\NewStaffJoiningList.cshtml" />
+    <Content Include="Views\HR_FinalClearanceReport\FinalClearanceReport.cshtml" />
+    <Content Include="Views\HR_FinalClearanceReport\FinalClearanceReportList.cshtml" />
+    <Content Include="Views\HR_WorkHandOverReport\WorkHandOverReport.cshtml" />
+    <Content Include="Views\HR_WorkHandOverReport\WorkHandOverReportList.cshtml" />
+    <Content Include="Views\HR_Reimbursement\Reimbursement.cshtml" />
+    <Content Include="Views\HR_Reimbursement\ReimbursementList.cshtml" />
+    <Content Include="Views\HR_StaffTransferReport\StaffTransferReport.cshtml" />
+    <Content Include="Views\HR_StaffTransferReport\StaffTransferReportList.cshtml" />
+    <Content Include="Views\HR_ResumingDuty\ResumingDuty.cshtml" />
+    <Content Include="Views\HR_ResumingDuty\ResumingDutyList.cshtml" />
+    <Content Include="Views\HR_PassportRelease\PassportRelease.cshtml" />
+    <Content Include="Views\HR_PassportRelease\PassportReleaseList.cshtml" />
+    <Content Include="Views\HR_LeaveClearance\LeaveClearance.cshtml" />
+    <Content Include="Views\HR_LeaveClearance\LeaveClearanceList.cshtml" />
+    <Content Include="Views\HR_RecruitmentRequisition\RecruitmentRequisition.cshtml" />
+    <Content Include="Views\HR_RecruitmentRequisition\RecruitmentRequisitionList.cshtml" />
+    <Content Include="Views\HR_MainPowerRequisition\MainPowerRequisition.cshtml" />
+    <Content Include="Views\HR_MainPowerRequisition\MainPowerRequisitionList.cshtml" />
+    <Content Include="Views\HR_RenualAndNonRenwal\RenualAndNonRenwal.cshtml" />
+    <Content Include="Views\HR_RenualAndNonRenwal\RenualAndNonRenwalList.cshtml" />
+    <Content Include="Views\HR_TourIntimation\TourIntimation.cshtml" />
+    <Content Include="Views\HR_TourIntimation\TourIntimationList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
