--- a/MassAutoGarage/MassAutoGarage.csproj
+++ b/MassAutoGarage/MassAutoGarage.csproj
@@ -3536,12 +3536,16 @@
     <Content Include="MyApp\HR_GeneralRequest.js" />
     <Content Include="MyApp\HR_LeaveClearance.js" />
     <Content Include="MyApp\HR_LeaveRequest.js" />
+    <Content Include="MyApp\HR_MainPowerRequisition.js" />
     <Content Include="MyApp\HR_NewStaffJoining.js" />
     <Content Include="MyApp\HR_PassportRelease.js" />
     <Content Include="MyApp\HR_RecruitmentRequisition.js" />
     <Content Include="MyApp\HR_Reimbursement.js" />
+    <Content Include="MyApp\HR_RenualAndNonRenwal.js" />
     <Content Include="MyApp\HR_ResumingDuty.js" />
     <Content Include="MyApp\HR_StaffTransferReport.js" />
+    <Content Include="MyApp\HR_TourIntimation.js" />
+    <Content Include="MyApp\HR_WorkHandOverReport.js" />
     <Content Include="MyApp\LoyaltyPointsMaster.js" />
     <Content Include="MyApp\PromotionMaster.js" />
     <Content Include="MyApp\SupplierOpeningBalance.js" />
@@ -3806,12 +3810,16 @@
     <Compile Include="Data\HR_GeneralRequest\HR_GeneralRequestDL.cs" />
     <Compile Include="Data\HR_LeaveClearance\HR_LeaveClearanceDL.cs" />
     <Compile Include="Data\HR_LeaveRequest\HR_LeaveRequestDL.cs" />
+    <Compile Include="Data\HR_MainPowerRequisition\HR_MainPowerRequisitionDL.cs" />
     <Compile Include="Data\HR_NewStaffJoining\HR_NewStaffJoiningDL.cs" />
     <Compile Include="Data\HR_PassportRelease\HR_PassportReleaseDL.cs" />
     <Compile Include="Data\HR_RecruitmentRequisition\HR_RecruitmentRequisitionDL.cs" />
     <Compile Include="Data\HR_Reimbursement\HR_ReimbursementDL.cs" />
+    <Compile Include="Data\HR_RenualAndNonRenwal\HR_RenualAndNonRenwalDL.cs" />
     <Compile Include="Data\HR_ResumingDuty\HR_ResumingDutyDL.cs" />
     <Compile Include="Data\HR_StaffTransferReport\HR_StaffTransferReportDL.cs" />
+    <Compile Include="Data\HR_TourIntimation\HR_TourIntimationDL.cs" />
+    <Compile Include="Data\HR_WorkHandOverReport\HR_WorkHandOverReportDL.cs" />
     <Compile Include="Data\JobCategoryMaster\JobCategoryMaster_DL.cs" />
     <Compile Include="Data\LeadSourceMaster\LeadSourceMaster_DL.cs" />
     <Compile Include="Data\LoginAuth\AccountMasterService.cs" />
@@ -3884,12 +3892,16 @@
     <Compile Include="Models\HR_GeneralRequest\HR_GeneralRequestModel.cs" />
     <Compile Include="Models\HR_LeaveClearance\HR_LeaveClearanceModel.cs" />
     <Compile Include="Models\HR_LeaveRequest\HR_LeaveRequestModel.cs" />
+    <Compile Include="Models\HR_MainPowerRequisition\HR_MainPowerRequisitionModel.cs" />
     <Compile Include="Models\HR_NewStaffJoining\HR_NewStaffJoiningModel.cs" />
     <Compile Include="Models\HR_PassportRelease\HR_PassportReleaseModel.cs" />
     <Compile Include="Models\HR_RecruitmentRequisition\HR_RecruitmentRequisitionModel.cs" />
     <Compile Include="Models\HR_Reimbursement\HR_ReimbursementModel.cs" />
+    <Compile Include="Models\HR_RenualAndNonRenwal\HR_RenualAndNonRenwalModel.cs" />
     <Compile Include="Models\HR_ResumingDuty\HR_ResumingDutyModel.cs" />
     <Compile Include="Models\HR_StaffTransferReport\HR_StaffTransferReportModel.cs" />
+    <Compile Include="Models\HR_TourIntimation\HR_TourIntimationModel.cs" />
+    <Compile Include="Models\HR_WorkHandOverReport\HR_WorkHandOverReportModel.cs" />
     <Compile Include="Models\JobCategoryMaster\JobCategoryMasterModel.cs" />
     <Compile Include="Models\LeadSourceMaster\LeadSourceMasterModel.cs" />
     <Compile Include="Models\LinkingAccount\LinkingAccountModel.cs" />
